[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/Drones4Point.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 2
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 1.8, 1.8 )
shape = SubResource( 1 )

[node name="CannonTimer" type="Timer" parent="."]

[node name="CannonSwitchTimer" type="Timer" parent="."]

[node name="ShootingPoint" type="Position2D" parent="."]

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 0, -0.5 )
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
scale = Vector2( 1.9, 1.9 )
shape = SubResource( 2 )

[node name="HurtboxTimer" type="Timer" parent="Hurtbox"]
[connection signal="timeout" from="CannonTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CannonSwitchTimer" to="." method="_on_CannonSwitchTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="Hurtbox/HurtboxTimer" to="." method="_on_HurtboxTimer_timeout"]
